simply tested ProxyGeneration